test/kubernetes/e2e/features/http_tunnel/testdata/edge.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: squid-proxy
spec:
  virtualHost:
    domains:
      - 'httpbin.example.com'
    routes:
      - matchers:
         - prefix: /
        routeAction:
          single:
            upstream:
              name: squid-proxy
        options:
          autoHostRewrite: true
