test/kubernetes/e2e/features/http_tunnel/testdata/gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: rewrite
spec:
  options:
    hostRewrite: httpbin.example.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: static-upstream
spec:
  parentRefs:
    - name: gw
  hostnames:
    - httpbin.example.com
  rules:
    - backendRefs:
      - name: squid-proxy
        kind: Upstream
        group: gloo.solo.io
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: rewrite
