test/kubernetes/e2e/features/http_tunnel/testdata/proxy.yaml
---
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: squid-proxy
  namespace: default
spec:
  static:
    hosts:
    - addr: squid
      port: 3128
  httpProxyHostname: "httpbin.httpbin.svc.cluster.local:8080"
