test/kubernetes/e2e/features/http_tunnel/testdata/squid.yaml
---
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: squid-proxy
  namespace: default
spec:
  static:
    hosts:
    - addr: squid.default.svc.cluster.local
      port: 3128
  httpProxyHostname: "httpbin.httpbin.svc.cluster.local:8080"
---
apiVersion: v1
kind: Pod
metadata:
  name: squid
  labels:
    app: squid
    app.kubernetes.io/name: squid
spec:
  volumes:
  - name: squid-config
    configMap:
      name: squid-config
  containers:
  - name: squid-container
    image: ubuntu/squid:5.6-22.10_beta
    env:
    - name: TZ
      value: "UTC"
    ports:
    - containerPort: 3128
    readinessProbe:
      tcpSocket:
        port: 3128
      periodSeconds: 1
      failureThreshold: 30
    volumeMounts:
    - name: squid-config
      mountPath: /etc/squid/squid.conf
      subPath: squid.conf
---
apiVersion: v1
kind: Service
metadata:
  name: squid
spec:
  selector:
    app: squid
  ports:
  - protocol: TCP
    port: 3128
    targetPort: 3128
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: squid-config
data:
  squid.conf: |
    acl localnet src 0.0.0.1-0.255.255.255	# RFC 1122 "this" network (LAN)
    acl localnet src 10.0.0.0/8		# RFC 1918 local private network (LAN)
    acl localnet src 100.64.0.0/10		# RFC 6598 shared address space (CGN)
    acl localnet src 169.254.0.0/16 	# RFC 3927 link-local (directly plugged) machines
    acl localnet src 172.16.0.0/12		# RFC 1918 local private network (LAN)
    acl localnet src 192.168.0.0/16		# RFC 1918 local private network (LAN)
    acl localnet src fc00::/7       	# RFC 4193 local private network range
    acl localnet src fe80::/10      	# RFC 4291 link-local (directly plugged) machines
    acl SSL_ports port 443
    acl Safe_ports port 80		# http
    acl Safe_ports port 21		# ftp
    acl Safe_ports port 443		# https
    acl Safe_ports port 70		# gopher
    acl Safe_ports port 210		# wais
    acl Safe_ports port 1025-65535	# unregistered ports
    acl Safe_ports port 280		# http-mgmt
    acl Safe_ports port 488		# gss-http
    acl Safe_ports port 591		# filemaker
    acl Safe_ports port 777		# multiling http
    acl CONNECT method CONNECT
    http_access deny !Safe_ports
    # commented out to allow non-TSL connections
    #http_access deny CONNECT !SSL_ports
    http_access allow localhost manager
    http_access deny manager
    http_access allow localhost
    http_access allow localnet
    http_access deny all
    max_filedescriptors 16384
    http_port 3128
    coredump_dir /var/spool/squid
    refresh_pattern ^ftp:		1440	20%	10080
    refresh_pattern ^gopher:	1440	0%	1440
    refresh_pattern -i (/cgi-bin/|\?) 0	0%	0
    refresh_pattern \/(Packages|Sources)(|\.bz2|\.gz|\.xz)$ 0 0% 0 refresh-ims
    refresh_pattern \/Release(|\.gpg)$ 0 0% 0 refresh-ims
    refresh_pattern \/InRelease$ 0 0% 0 refresh-ims
    refresh_pattern \/(Translation-.*)(|\.bz2|\.gz|\.xz)$ 0 0% 0 refresh-ims
    refresh_pattern .		0	20%	4320
    logfile_rotate 0
